# MotionTrackerLab

./: .gitignore  .proxyrc  404.html  LICENSE  README.md  contributing.md  gen_ref_nav.py  index.html  mkdocs.yml  objects.inv  package-lock.json  package.json  setup.cfg  sitemap.xml  tailwind.config.js  tsconfig.json
assets/: dummy_image.pptx
contributing/: index.html
css/: material.css  mkdocstrings.css  style.css
development/project-overview/: index.html
docs/: gen_ref_nav.py
docs/how-to-guides/: software-advanced.md
docs/tutorials/: materials-hardware.md  software-beginner.md  software-setup.md
how-to-guides/software-advanced/: index.html
labconfig/: __init__.py  config.yaml  log.py  test_config.yaml  types.py
labweb/backend/: __init__.py  api.py  log.py  sockets.py
labweb/frontend/: README.md  api.ts  eventBus.ts  index.html  index.tsx  store.ts  types.ts
labweb/frontend/components/: CalibrationMarkers.tsx  ProgressBar.tsx  TrackingPoint.tsx  Video.tsx  remember.tsx  sidebar-data.tsx  sidebar.tsx  table.tsx
labweb/frontend/routes/: calibration.tsx  datacollection.tsx  debug.tsx  experiment.tsx  home.tsx  output.tsx  remember.tsx  root.tsx  startpage.tsx
license/: index.html
motiontracker/: calibration.py  log.py  tracker.py  trackerstate.py
motiontracker/camera/: base_camera.py  camera.py  camera_opencv.py  camera_pi.py  camera_video.py
motiontracker/utility/: cv_util.py  load_experiments.py
reference/: SUMMARY.txt
reference/motiontracker/: index.html
reference/motiontracker/calibration/: index.html
reference/motiontracker/camera/: index.html
scripts/: run_demo.py  run_test_extraction.py
search/: search_index.json
tests/: conftest.py  test_calibration.py
tutorials/materials-hardware/: index.html
tutorials/software-beginner/: index.html
tutorials/software-setup/: index.html
(+20 files in other folders)
