[metadata]
name = PhysicsMotionExperiment
version = 0.0.1
description = An opensource software/hardware solution for an experimental physics lab studying kinematics.
long_description = file: README.md
keywords = motion, tracker, physics, rpi

[options]
packages = 
    # labdesktop
    labweb
    motiontracker
    labconfig
install_requires =
    pyyaml
    opencv-python==4.5.5.64
    scipy
    Pillow<9
    python-statemachine
    fastapi[all]
    rich

[options.extras_require]
dev =
    pydot
    pytest
    python-statemachine[diagrams]
    matplotlib>=3.0
    mkdocstrings[python]
    
[options.entry_points]
console_scripts =
    lab-desktop = labdesktop.cli:start

[options.packages.find]
exclude =
    archive*
    docs*