[metadata]
name = PhysicsMotionExperiment
version = 0.0.1
description = An opensource software/hardware solution for an experimental physics lab studying kinematics.
long_description = file: README.md
keywords = motion tracker physics rpi

[options]
packages = 
    # labdesktop
    labweb
    motiontracker
    labconfig
install_requires =
    pyyaml
    opencv-python==4.5.5.64
    scipy
    Pillow<9
    python-statemachine
    fastapi[all]
    rich

[options.extras_require]
dev =
    pydot
    pytest
    python-statemachine[diagrams]
    matplotlib>=3.0
    mkdocstrings[python]
    mkdocs-autorefs>=0.3.1
    pymdown-extensions>=6.3
    mkdocs>=1.3
    mkdocs-coverage>=0.2
    mkdocs-gen-files>=0.3
    mkdocs-literate-nav>=0.4
    mkdocs-material>=7.3
    mkdocs-section-index>=0.3
    mkdocstrings-python>=0.5.1
    markdown-callouts>=0.2
    markdown-exec>=0.5
    toml>=0.10 
    
[options.entry_points]
console_scripts =
    lab-desktop = labdesktop.cli:start

[options.packages.find]
exclude =
    archive*
    docs*